@@ -6,6 +6,9 @@ from 2.7.17 to 2.7.18
   example).
 - fixed bug met when reading compressed data with multiple threads (-G
   option with arguement 2 or larger) in sequential read mode.
+- fixed bug avoiding dar to repair archives relying on block compression,
+  testing the "repaired" archive lead to reporting corrupted data for all
+  compressed files and compressed EA.
 
 from 2.7.16 to 2.7.17
 - fixed bug where -R path ending with // was breaking the path filtering
